--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Spotlight Effect</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mechanism Design</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-  <div class="background"></div>
-  <div class="overlay"></div>
 
-  <script src="script.js"></script>
+    <div id="overlay"></div> 
+
+    <script src="script.js"></script>
 </body>
 </html>
